--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <link rel="icon" href="https://www.dropbox.com/s/3n092ama7531ccz/Senza%20titolo-1_Tavola%20disegno%201.jpg?dl=0">
+    <link rel="icon" href="https://www.dropbox.com/s/3n092ama7531ccz/Senza%20titolo-1_Tavola%20disegno%201.jpg?dl=0" type="image/jpg">
     <div class="container">
       <header>
 
